# GoodHound

./: .gitignore  README.md  changelog.md  goodhound.py  pyproject.toml  readme.md  requirements.txt  sqlqueries.md
.github/: FUNDING.yml
Sample SharpHound Output/: README.md
goodhound/: __init__.py  __main__.py  ghresults.py  ghutils.py  neodb.py  paths.py  sqldb.py
